fixed broken spacing in faction tab

--- a/src/app/components/unit-details-dialog/tabs/unit-details-factions-tab.component.css
+++ b/src/app/components/unit-details-dialog/tabs/unit-details-factions-tab.component.css
@@ -71,6 +71,10 @@
     white-space: nowrap;
 }
 
+.faction-name-middle {
+    white-space: pre-wrap;
+}
+
 .faction-name-tail {
     display: inline-flex;
     align-items: baseline;
